src/ocga/ocgaparser/ocgaParser.py
# Generated from ocga.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ocgaParser ( Parser ):

    grammarFileName = "ocga.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'geometry'", "'x_to_longer_side'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'not'", "'and'", 
                     "'or'", "<INVALID>", "'ocga'", "'const'", "'rule'", 
                     "'if'", "'then'", "'else'", "'endif'", "'tag'", "'roof_colour'", 
                     "'roof_material'", "'colour'", "'material'", "'align_scope'", 
                     "'outer_rectangle'", "'massModel'", "'scale'", "'translate'", 
                     "'split_z'", "'split_x'", "'split_y'", "'rotate_scope'", 
                     "'primitive_cylinder'", "'primitive_halfcylinder'", 
                     "'create_roof'", "'roof_direction'", "'comp_border'", 
                     "'comp_edges'", "'comp_roof'", "'restore'", "'nil'", 
                     "'nope'", "'rotate'", "'bevel'", "'print'", "'continue'", 
                     "'insert2'", "<INVALID>", "<INVALID>", "'''", "'~'", 
                     "'&'", "':'", "','", "'|'", "'{'", "'}'", "'('", "')'", 
                     "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "<INVALID>", "<INVALID>", "' '", "'\\t'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "HEXADECIMAL", "OCGA", "CONST", "RULE", "IF", "THEN", 
                      "ELSE", "ENDIF", "TAG", "ROOFCOLOUR", "ROOFMATERIAL", 
                      "COLOUR", "MATERIAL", "ALIGNSCOPE", "OUTERRECTANGLE", 
                      "MASSMODEL", "SCALE", "TRANSLATE", "SPLIT_Z", "SPLIT_X", 
                      "SPLIT_Y", "ROTATESCOPE", "PRIMITIVECYLINDER", "PRIMITIVEHALFCYLINDER", 
                      "ROOF", "ROOFDIRECTION", "COMPBORDER", "COMPEDGES", 
                      "COMPROOF", "RESTORE", "NIL", "NOPE", "ROTATE", "BEVEL", 
                      "PRINT", "CONTINUE", "INSERT2", "NUMBER", "LITERAL", 
                      "RELATIVE_MARK", "APPROX_MARK", "HEX_COLOUR_MARK", 
                      "COLUMN", "COMMA", "PIPE", "LCURLY", "RCURLY", "LPAREN", 
                      "RPAREN", "LBRACKET", "RBRACKET", "PLUS", "MINUS", 
                      "MULT", "DIV", "MODULUS", "EQ", "COMMENT", "NEWLINE", 
                      "WS", "TAB" ]

    RULE_prog = 0
    RULE_ocga_header = 1
    RULE_rule = 2
    RULE_rule_header = 3
    RULE_const = 4
    RULE_operator = 5
    RULE_сonditional = 6
    RULE_split_pattern = 7
    RULE_split_pattern_element = 8
    RULE_split_selector = 9
    RULE_list = 10
    RULE_lexpr = 11
    RULE_expr = 12
    RULE_relative_number = 13
    RULE_simple_expr = 14
    RULE_rule_name = 15
    RULE_roof_shape = 16
    RULE_key_name = 17
    RULE_tag_value = 18

    ruleNames =  [ "prog", "ocga_header", "rule", "rule_header", "const", 
                   "operator", "сonditional", "split_pattern", "split_pattern_element", 
                   "split_selector", "list", "lexpr", "expr", "relative_number", 
                   "simple_expr", "rule_name", "roof_shape", "key_name", 
                   "tag_value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    HEXADECIMAL=12
    OCGA=13
    CONST=14
    RULE=15
    IF=16
    THEN=17
    ELSE=18
    ENDIF=19
    TAG=20
    ROOFCOLOUR=21
    ROOFMATERIAL=22
    COLOUR=23
    MATERIAL=24
    ALIGNSCOPE=25
    OUTERRECTANGLE=26
    MASSMODEL=27
    SCALE=28
    TRANSLATE=29
    SPLIT_Z=30
    SPLIT_X=31
    SPLIT_Y=32
    ROTATESCOPE=33
    PRIMITIVECYLINDER=34
    PRIMITIVEHALFCYLINDER=35
    ROOF=36
    ROOFDIRECTION=37
    COMPBORDER=38
    COMPEDGES=39
    COMPROOF=40
    RESTORE=41
    NIL=42
    NOPE=43
    ROTATE=44
    BEVEL=45
    PRINT=46
    CONTINUE=47
    INSERT2=48
    NUMBER=49
    LITERAL=50
    RELATIVE_MARK=51
    APPROX_MARK=52
    HEX_COLOUR_MARK=53
    COLUMN=54
    COMMA=55
    PIPE=56
    LCURLY=57
    RCURLY=58
    LPAREN=59
    RPAREN=60
    LBRACKET=61
    RBRACKET=62
    PLUS=63
    MINUS=64
    MULT=65
    DIV=66
    MODULUS=67
    EQ=68
    COMMENT=69
    NEWLINE=70
    WS=71
    TAB=72

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ocga_header(self):
            return self.getTypedRuleContext(ocgaParser.Ocga_headerContext,0)


        def EOF(self):
            return self.getToken(ocgaParser.EOF, 0)

        def const(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ocgaParser.ConstContext)
            else:
                return self.getTypedRuleContext(ocgaParser.ConstContext,i)


        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ocgaParser.RuleContext)
            else:
                return self.getTypedRuleContext(ocgaParser.RuleContext,i)


        def getRuleIndex(self):
            return ocgaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ocgaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.ocga_header()
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 39
                self.const()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 45
                self.rule_()
                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==15):
                    break

            self.state = 50
            self.match(ocgaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ocga_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OCGA(self):
            return self.getToken(ocgaParser.OCGA, 0)

        def NUMBER(self):
            return self.getToken(ocgaParser.NUMBER, 0)

        def getRuleIndex(self):
            return ocgaParser.RULE_ocga_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOcga_header" ):
                listener.enterOcga_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOcga_header" ):
                listener.exitOcga_header(self)




    def ocga_header(self):

        localctx = ocgaParser.Ocga_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ocga_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(ocgaParser.OCGA)
            self.state = 53
            self.match(ocgaParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_header(self):
            return self.getTypedRuleContext(ocgaParser.Rule_headerContext,0)


        def operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ocgaParser.OperatorContext)
            else:
                return self.getTypedRuleContext(ocgaParser.OperatorContext,i)


        def getRuleIndex(self):
            return ocgaParser.RULE_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule" ):
                listener.enterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule" ):
                listener.exitRule(self)




    def rule_(self):

        localctx = ocgaParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.rule_header()
            self.state = 57 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 56
                self.operator()
                self.state = 59 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 562949952438272) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE(self):
            return self.getToken(ocgaParser.RULE, 0)

        def rule_name(self):
            return self.getTypedRuleContext(ocgaParser.Rule_nameContext,0)


        def COLUMN(self):
            return self.getToken(ocgaParser.COLUMN, 0)

        def getRuleIndex(self):
            return ocgaParser.RULE_rule_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule_header" ):
                listener.enterRule_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule_header" ):
                listener.exitRule_header(self)




    def rule_header(self):

        localctx = ocgaParser.Rule_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rule_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(ocgaParser.RULE)
            self.state = 62
            self.rule_name()
            self.state = 63
            self.match(ocgaParser.COLUMN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(ocgaParser.CONST, 0)

        def LITERAL(self):
            return self.getToken(ocgaParser.LITERAL, 0)

        def EQ(self):
            return self.getToken(ocgaParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(ocgaParser.ExprContext,0)


        def getRuleIndex(self):
            return ocgaParser.RULE_const

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst" ):
                listener.enterConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst" ):
                listener.exitConst(self)




    def const(self):

        localctx = ocgaParser.ConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_const)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(ocgaParser.CONST)
            self.state = 66
            self.match(ocgaParser.LITERAL)
            self.state = 67
            self.match(ocgaParser.EQ)
            self.state = 68
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def сonditional(self):
            return self.getTypedRuleContext(ocgaParser.СonditionalContext,0)


        def ALIGNSCOPE(self):
            return self.getToken(ocgaParser.ALIGNSCOPE, 0)

        def TAG(self):
            return self.getToken(ocgaParser.TAG, 0)

        def key_name(self):
            return self.getTypedRuleContext(ocgaParser.Key_nameContext,0)


        def tag_value(self):
            return self.getTypedRuleContext(ocgaParser.Tag_valueContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ocgaParser.COMMA)
            else:
                return self.getToken(ocgaParser.COMMA, i)

        def EQ(self):
            return self.getToken(ocgaParser.EQ, 0)

        def ROOFCOLOUR(self):
            return self.getToken(ocgaParser.ROOFCOLOUR, 0)

        def ROOFMATERIAL(self):
            return self.getToken(ocgaParser.ROOFMATERIAL, 0)

        def COLOUR(self):
            return self.getToken(ocgaParser.COLOUR, 0)

        def MATERIAL(self):
            return self.getToken(ocgaParser.MATERIAL, 0)

        def OUTERRECTANGLE(self):
            return self.getToken(ocgaParser.OUTERRECTANGLE, 0)

        def rule_name(self):
            return self.getTypedRuleContext(ocgaParser.Rule_nameContext,0)


        def MASSMODEL(self):
            return self.getToken(ocgaParser.MASSMODEL, 0)

        def SCALE(self):
            return self.getToken(ocgaParser.SCALE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ocgaParser.ExprContext)
            else:
                return self.getTypedRuleContext(ocgaParser.ExprContext,i)


        def TRANSLATE(self):
            return self.getToken(ocgaParser.TRANSLATE, 0)

        def SPLIT_X(self):
            return self.getToken(ocgaParser.SPLIT_X, 0)

        def split_pattern(self):
            return self.getTypedRuleContext(ocgaParser.Split_patternContext,0)


        def SPLIT_Y(self):
            return self.getToken(ocgaParser.SPLIT_Y, 0)

        def SPLIT_Z(self):
            return self.getToken(ocgaParser.SPLIT_Z, 0)

        def ROTATESCOPE(self):
            return self.getToken(ocgaParser.ROTATESCOPE, 0)

        def ROTATE(self):
            return self.getToken(ocgaParser.ROTATE, 0)

        def PRIMITIVECYLINDER(self):
            return self.getToken(ocgaParser.PRIMITIVECYLINDER, 0)

        def list_(self):
            return self.getTypedRuleContext(ocgaParser.ListContext,0)


        def PRIMITIVEHALFCYLINDER(self):
            return self.getToken(ocgaParser.PRIMITIVEHALFCYLINDER, 0)

        def ROOF(self):
            return self.getToken(ocgaParser.ROOF, 0)

        def roof_shape(self):
            return self.getTypedRuleContext(ocgaParser.Roof_shapeContext,0)


        def ROOFDIRECTION(self):
            return self.getToken(ocgaParser.ROOFDIRECTION, 0)

        def COMPBORDER(self):
            return self.getToken(ocgaParser.COMPBORDER, 0)

        def COMPEDGES(self):
            return self.getToken(ocgaParser.COMPEDGES, 0)

        def COMPROOF(self):
            return self.getToken(ocgaParser.COMPROOF, 0)

        def BEVEL(self):
            return self.getToken(ocgaParser.BEVEL, 0)

        def INSERT2(self):
            return self.getToken(ocgaParser.INSERT2, 0)

        def RESTORE(self):
            return self.getToken(ocgaParser.RESTORE, 0)

        def NIL(self):
            return self.getToken(ocgaParser.NIL, 0)

        def NOPE(self):
            return self.getToken(ocgaParser.NOPE, 0)

        def CONTINUE(self):
            return self.getToken(ocgaParser.CONTINUE, 0)

        def PRINT(self):
            return self.getToken(ocgaParser.PRINT, 0)

        def getRuleIndex(self):
            return ocgaParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)




    def operator(self):

        localctx = ocgaParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.state = 190
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.сonditional()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(ocgaParser.ALIGNSCOPE)
                self.state = 72
                _la = self._input.LA(1)
                if not(_la==1 or _la==2):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.match(ocgaParser.TAG)
                self.state = 74
                self.key_name()
                self.state = 75
                _la = self._input.LA(1)
                if not(_la==55 or _la==68):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 76
                self.tag_value()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.match(ocgaParser.ROOFCOLOUR)
                self.state = 79
                self.tag_value()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.match(ocgaParser.ROOFMATERIAL)
                self.state = 81
                self.tag_value()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.match(ocgaParser.COLOUR)
                self.state = 83
                self.tag_value()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 84
                self.match(ocgaParser.MATERIAL)
                self.state = 85
                self.tag_value()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.match(ocgaParser.OUTERRECTANGLE)
                self.state = 87
                self.rule_name()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 88
                self.match(ocgaParser.MASSMODEL)
                self.state = 89
                self.rule_name()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 90
                self.match(ocgaParser.SCALE)
                self.state = 91
                self.expr(0)
                self.state = 92
                self.match(ocgaParser.COMMA)
                self.state = 93
                self.expr(0)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 95
                self.match(ocgaParser.SCALE)
                self.state = 96
                self.expr(0)
                self.state = 97
                self.match(ocgaParser.COMMA)
                self.state = 98
                self.expr(0)
                self.state = 99
                self.match(ocgaParser.COMMA)
                self.state = 100
                self.expr(0)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 102
                self.match(ocgaParser.TRANSLATE)
                self.state = 103
                self.expr(0)
                self.state = 104
                self.match(ocgaParser.COMMA)
                self.state = 105
                self.expr(0)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 107
                self.match(ocgaParser.TRANSLATE)
                self.state = 108
                self.expr(0)
                self.state = 109
                self.match(ocgaParser.COMMA)
                self.state = 110
                self.expr(0)
                self.state = 111
                self.match(ocgaParser.COMMA)
                self.state = 112
                self.expr(0)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 114
                self.match(ocgaParser.SPLIT_X)
                self.state = 115
                self.split_pattern()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 116
                self.match(ocgaParser.SPLIT_Y)
                self.state = 117
                self.split_pattern()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 118
                self.match(ocgaParser.SPLIT_Z)
                self.state = 119
                self.split_pattern()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 120
                self.match(ocgaParser.ROTATESCOPE)
                self.state = 121
                self.expr(0)
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 122
                self.match(ocgaParser.ROTATE)
                self.state = 123
                self.expr(0)
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 124
                self.match(ocgaParser.PRIMITIVECYLINDER)
                self.state = 125
                self.expr(0)
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 126
                self.match(ocgaParser.PRIMITIVECYLINDER)
                self.state = 127
                self.expr(0)
                self.state = 128
                self.match(ocgaParser.COMMA)
                self.state = 129
                self.expr(0)
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 131
                self.match(ocgaParser.PRIMITIVECYLINDER)
                self.state = 132
                self.expr(0)
                self.state = 133
                self.match(ocgaParser.COMMA)
                self.state = 134
                self.expr(0)
                self.state = 135
                self.match(ocgaParser.COMMA)
                self.state = 136
                self.list_()
                pass

            elif la_ == 22:
                self.enterOuterAlt(localctx, 22)
                self.state = 138
                self.match(ocgaParser.PRIMITIVEHALFCYLINDER)
                self.state = 139
                self.expr(0)
                pass

            elif la_ == 23:
                self.enterOuterAlt(localctx, 23)
                self.state = 140
                self.match(ocgaParser.PRIMITIVEHALFCYLINDER)
                self.state = 141
                self.expr(0)
                self.state = 142
                self.match(ocgaParser.COMMA)
                self.state = 143
                self.expr(0)
                pass

            elif la_ == 24:
                self.enterOuterAlt(localctx, 24)
                self.state = 145
                self.match(ocgaParser.ROOF)
                self.state = 146
                self.roof_shape()
                self.state = 147
                self.match(ocgaParser.COMMA)
                self.state = 148
                self.expr(0)
                pass

            elif la_ == 25:
                self.enterOuterAlt(localctx, 25)
                self.state = 150
                self.match(ocgaParser.ROOFDIRECTION)
                self.state = 151
                self.expr(0)
                pass

            elif la_ == 26:
                self.enterOuterAlt(localctx, 26)
                self.state = 152
                self.match(ocgaParser.COMPBORDER)
                self.state = 153
                self.expr(0)
                self.state = 154
                self.match(ocgaParser.COMMA)
                self.state = 155
                self.rule_name()
                pass

            elif la_ == 27:
                self.enterOuterAlt(localctx, 27)
                self.state = 157
                self.match(ocgaParser.COMPEDGES)
                self.state = 158
                self.expr(0)
                self.state = 159
                self.match(ocgaParser.COMMA)
                self.state = 160
                self.rule_name()
                pass

            elif la_ == 28:
                self.enterOuterAlt(localctx, 28)
                self.state = 162
                self.match(ocgaParser.COMPROOF)
                self.state = 163
                self.rule_name()
                pass

            elif la_ == 29:
                self.enterOuterAlt(localctx, 29)
                self.state = 164
                self.match(ocgaParser.BEVEL)
                self.state = 165
                self.expr(0)
                pass

            elif la_ == 30:
                self.enterOuterAlt(localctx, 30)
                self.state = 166
                self.match(ocgaParser.BEVEL)
                self.state = 167
                self.expr(0)
                self.state = 168
                self.match(ocgaParser.COMMA)
                self.state = 169
                self.list_()
                pass

            elif la_ == 31:
                self.enterOuterAlt(localctx, 31)
                self.state = 171
                self.match(ocgaParser.INSERT2)
                self.state = 172
                self.expr(0)
                self.state = 173
                self.match(ocgaParser.COMMA)
                self.state = 174
                self.expr(0)
                pass

            elif la_ == 32:
                self.enterOuterAlt(localctx, 32)
                self.state = 176
                self.match(ocgaParser.INSERT2)
                self.state = 177
                self.expr(0)
                self.state = 178
                self.match(ocgaParser.COMMA)
                self.state = 179
                self.expr(0)
                self.state = 180
                self.match(ocgaParser.COMMA)
                self.state = 181
                self.list_()
                pass

            elif la_ == 33:
                self.enterOuterAlt(localctx, 33)
                self.state = 183
                self.match(ocgaParser.RESTORE)
                pass

            elif la_ == 34:
                self.enterOuterAlt(localctx, 34)
                self.state = 184
                self.match(ocgaParser.NIL)
                pass

            elif la_ == 35:
                self.enterOuterAlt(localctx, 35)
                self.state = 185
                self.match(ocgaParser.NOPE)
                pass

            elif la_ == 36:
                self.enterOuterAlt(localctx, 36)
                self.state = 186
                self.match(ocgaParser.CONTINUE)
                self.state = 187
                self.rule_name()
                pass

            elif la_ == 37:
                self.enterOuterAlt(localctx, 37)
                self.state = 188
                self.match(ocgaParser.PRINT)
                self.state = 189
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class СonditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ocgaParser.IF, 0)

        def lexpr(self):
            return self.getTypedRuleContext(ocgaParser.LexprContext,0)


        def THEN(self):
            return self.getToken(ocgaParser.THEN, 0)

        def ENDIF(self):
            return self.getToken(ocgaParser.ENDIF, 0)

        def operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ocgaParser.OperatorContext)
            else:
                return self.getTypedRuleContext(ocgaParser.OperatorContext,i)


        def ELSE(self):
            return self.getToken(ocgaParser.ELSE, 0)

        def getRuleIndex(self):
            return ocgaParser.RULE_сonditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterСonditional" ):
                listener.enterСonditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitСonditional" ):
                listener.exitСonditional(self)




    def сonditional(self):
